<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.domain.controller.DetailsViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/background">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/medium_size">

            <ImageView
                android:id="@+id/beerImg"
                android:layout_width="@dimen/logo_image"
                android:layout_height="@dimen/login_image"
                android:layout_marginTop="@dimen/details_image_top_margin"
                android:layout_marginBottom="@dimen/medium_size"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/dateFirstBrewed"
                tools:src="@drawable/beer"
                imageUrl="@{viewModel.beer.imageUrl}"/>

            <TextView
                android:id="@+id/beerName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/beerImg"
                android:text="@{viewModel.beer.name}"
                tools:text="@string/beer_name_example"
                android:textSize="@dimen/details_title_size"
                android:layout_marginTop="@dimen/small_size"
                android:textColor="?attr/textColor"
                android:fontFamily="sans-serif"
                android:gravity="center"/>

            <TextView
                android:id="@+id/beerTagline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/beerImg"
                app:layout_constraintTop_toBottomOf="@+id/beerName"
                android:text="@{viewModel.beer.tagline}"
                tools:text="@string/beer_tagline_example"
                android:textSize="@dimen/details_content_size"
                android:layout_marginTop="@dimen/small_size"
                android:textColor="?attr/textColorMild"
                android:gravity="center"/>


           <androidx.core.widget.NestedScrollView
               android:id="@+id/beerDescription"
               android:layout_width="0dp"
               android:layout_height="@dimen/details_description_height"
               app:layout_constraintStart_toEndOf="@+id/beerImg"
               app:layout_constraintTop_toBottomOf="@+id/beerTagline"
               app:layout_constraintEnd_toEndOf="parent">
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:text="@{viewModel.beer.description}"
                   tools:text="@string/beer_description_example"
                   android:layout_marginTop="@dimen/small_size"
                   android:textColor="?attr/textColorMild"
                   android:textSize="@dimen/title_text_size"/>
           </androidx.core.widget.NestedScrollView>

            <TextView
                android:id="@+id/dateFirstBrewed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/beerDescription"
                android:text="@{viewModel.beer.getFirstBrewedDate()}"
                tools:text="@string/date_example"
                android:textSize="@dimen/details_title_size"
                android:textColor="?attr/textColor"
                android:layout_marginTop="@dimen/small_size"
                android:layout_marginStart="@dimen/medium_size"/>

            <TextView
                android:id="@+id/abv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/dateFirstBrewed"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/alcohol_by_volume"
                android:textSize="@dimen/details_content_size"
                android:layout_marginTop="@dimen/abv_top_margin"
                android:layout_marginStart="@dimen/medium_size"
                android:textColor="?attr/textColor"/>

            <ProgressBar
                android:id="@+id/abvProgressBar"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:progressBackgroundTint="@color/no_color"
                android:layout_width="match_parent"
                android:layout_height="@dimen/ten_dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/abv"
                android:layout_marginTop="@dimen/small_size"
                android:layout_marginStart="@dimen/medium_size"
                android:layout_marginEnd="@dimen/medium_size"
                android:min="1"
                android:max="55"
                android:progress="@{viewModel.beer.getABVIntegerValue()}"
                android:progressTint="@color/green"/>

            <TextView
                android:id="@+id/ibu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/abvProgressBar"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/int_bitterness"
                android:textSize="@dimen/details_content_size"
                android:layout_marginTop="@dimen/small_size"
                android:layout_marginStart="@dimen/medium_size"
                android:textColor="?attr/textColor"/>

            <ProgressBar
                android:id="@+id/ibuProgressBar"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:progressBackgroundTint="@color/no_color"
                android:layout_width="match_parent"
                android:layout_height="@dimen/ten_dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ibu"
                android:layout_marginTop="@dimen/small_size"
                android:layout_marginStart="@dimen/medium_size"
                android:layout_marginEnd="@dimen/medium_size"
                android:min="0"
                android:max="1157"
                android:progress="@{viewModel.beer.getIBUIntegerValue()}"
                android:progressTint="@color/red"/>

            <TextView
                android:id="@+id/ebc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/ibuProgressBar"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/ebc"
                android:textSize="@dimen/details_content_size"
                android:layout_marginTop="@dimen/small_size"
                android:layout_marginStart="@dimen/medium_size"
                android:textColor="?attr/textColor"/>

            <ProgressBar
                android:id="@+id/ebcProgressBar"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:progressBackgroundTint="@color/no_color"
                android:layout_width="match_parent"
                android:layout_height="@dimen/ten_dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ebc"
                android:layout_marginTop="@dimen/small_size"
                android:layout_marginStart="@dimen/medium_size"
                android:layout_marginEnd="@dimen/medium_size"
                android:min="0"
                android:max="600"
                android:progress="@{viewModel.beer.getEBCIntegerValue()}"
                android:progressTint="@color/yellow"/>

            <TextView
                android:id="@+id/ph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/ebcProgressBar"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/ph"
                android:textSize="@dimen/details_content_size"
                android:layout_marginTop="@dimen/small_size"
                android:layout_marginStart="@dimen/medium_size"
                android:textColor="?attr/textColor"/>

            <ProgressBar
                android:id="@+id/phProgressBar"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:progressBackgroundTint="@color/no_color"
                android:layout_width="match_parent"
                android:layout_height="@dimen/ten_dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ph"
                android:layout_marginTop="@dimen/small_size"
                android:layout_marginStart="@dimen/medium_size"
                android:layout_marginEnd="@dimen/medium_size"
                android:min="0"
                android:max="79"
                android:progress="@{viewModel.beer.getPHIntegerValue()}"
                android:progressTint="@color/blue"/>

            <TextView
                android:id="@+id/brewersTipsTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/phProgressBar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/small_size"
                android:layout_marginStart="@dimen/medium_size"
                android:layout_marginEnd="@dimen/medium_size"
                android:text="@string/brewers_tips_title"
                android:textSize="@dimen/details_title_size"
                android:textColor="?attr/textColor"/>

            <TextView
                android:id="@+id/brewersTipsText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/brewersTipsTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/small_size"
                android:layout_marginStart="@dimen/medium_size"
                android:layout_marginEnd="@dimen/medium_size"
                android:text="@{viewModel.beer.brewersTip}"
                tools:text="@string/tips_example"
                android:textSize="@dimen/title_text_size"
                android:textColor="?attr/textColor"/>

            <TextView
                android:id="@+id/contributedBy"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintTop_toBottomOf="@+id/brewersTipsText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/small_size"
                android:layout_marginStart="@dimen/medium_size"
                android:layout_marginEnd="@dimen/medium_size"
                android:text="@{viewModel.beer.getContributor()}"
                tools:text="@string/tips_example"
                android:textSize="@dimen/details_title_size"
                android:textColor="?attr/textColor"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>