<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="beer"
            type="com.example.data.model.Beer" />
        <variable
            name="clickListener"
            type="com.example.beerapp.adapter.BeerClickListener" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/pageMarginAndOffset"
        android:layout_marginRight="@dimen/pageMarginAndOffset"
        app:cardCornerRadius="@dimen/offset">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/backgroundColor"
            android:onClick="@{() -> clickListener.onClick(beer)}">

            <ImageView
                android:id="@+id/fav_beer_image"
                android:layout_width="@dimen/fav_beer_image_width"
                android:layout_height="@dimen/fav_beer_image_height"
                android:layout_marginTop="@dimen/medium_size"
                android:layout_marginStart="@dimen/medium_size"
                android:layout_marginEnd="@dimen/medium_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@drawable/beer_bottle" />

            <TextView
                android:id="@+id/fav_beer_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium_size"
                android:layout_marginTop="@dimen/small_size"
                android:layout_marginEnd="@dimen/medium_size"
                android:textAllCaps="true"
                android:textColor="?attr/textColor"
                android:textSize="@dimen/title_text_size"
                android:textStyle="bold"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fav_beer_image"
                tools:text="@string/beer_name_example" />

            <TextView
                android:id="@+id/fav_beer_tagline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium_size"
                android:layout_marginTop="@dimen/small_size"
                android:layout_marginEnd="@dimen/medium_size"
                android:textAlignment="center"
                android:textColor="?attr/textColorMild"
                android:textSize="@dimen/content_text_size"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fav_beer_name"
                tools:text="@string/beer_tagline_example" />

            <ScrollView
                android:id="@+id/fav_beer_description"
                android:layout_width="0dp"
                android:layout_height="@dimen/eighty_dp"
                android:layout_marginStart="@dimen/medium_size"
                android:layout_marginTop="@dimen/small_size"
                android:layout_marginEnd="@dimen/medium_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fav_beer_tagline">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="?attr/textColor"
                    android:textSize="@dimen/content_text_size"
                    tools:text="@string/beer_description_example" />
            </ScrollView>

            <TextView
                android:id="@+id/fav_beer_abv_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium_size"
                android:layout_marginTop="@dimen/medium_size"
                android:text="@string/abv"
                android:textColor="?attr/textColor"
                android:textSize="@dimen/title_text_size"
                app:layout_constraintEnd_toStartOf="@+id/fav_beer_abv_value"
                app:layout_constraintStart_toEndOf="@+id/fav_beer_image"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/fav_beer_ibu_text"/>

            <TextView
                android:id="@+id/fav_beer_abv_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_size"
                android:layout_marginTop="@dimen/medium_size"
                android:layout_marginEnd="@dimen/medium_size"
                android:textColor="@color/green"
                android:textSize="@dimen/title_text_size"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/fav_beer_abv_text"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/fav_beer_ibu_value"
                tools:text="6.0" />

            <TextView
                android:id="@+id/fav_beer_ibu_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium_size"
                android:layout_marginTop="@dimen/medium_size"
                android:text="@string/ibu"
                android:textColor="?attr/textColor"
                android:textSize="@dimen/title_text_size"
                app:layout_constraintEnd_toStartOf="@+id/fav_beer_ibu_value"
                app:layout_constraintStart_toEndOf="@+id/fav_beer_image"
                app:layout_constraintTop_toBottomOf="@+id/fav_beer_abv_text"
                app:layout_constraintBottom_toTopOf="@id/fav_beer_ebc_text"/>

            <TextView
                android:id="@+id/fav_beer_ibu_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_size"
                android:layout_marginEnd="@dimen/medium_size"
                android:layout_marginTop="@dimen/medium_size"
                android:textColor="@color/red"
                android:textSize="@dimen/title_text_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/fav_beer_ibu_text"
                app:layout_constraintTop_toBottomOf="@+id/fav_beer_abv_value"
                app:layout_constraintBottom_toTopOf="@id/fav_beer_ebc_value"
                tools:text="60.0" />

            <TextView
                android:id="@+id/fav_beer_ebc_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium_size"
                android:layout_marginTop="@dimen/medium_size"
                android:text="@string/ebc_short"
                android:textColor="?attr/textColor"
                android:textSize="@dimen/title_text_size"
                app:layout_constraintEnd_toStartOf="@+id/fav_beer_ebc_value"
                app:layout_constraintStart_toEndOf="@id/fav_beer_image"
                app:layout_constraintTop_toBottomOf="@+id/fav_beer_ibu_text"
                app:layout_constraintBottom_toTopOf="@id/fav_beer_name"/>

            <TextView
                android:id="@+id/fav_beer_ebc_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_size"
                android:layout_marginEnd="@dimen/pageMargin"
                android:textColor="@color/blue"
                android:textSize="@dimen/title_text_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/fav_beer_ebc_text"
                app:layout_constraintTop_toBottomOf="@+id/fav_beer_ibu_value"
                app:layout_constraintBottom_toTopOf="@id/fav_beer_name"
                tools:text="17.0" />

            <TextView
                android:id="@+id/fav_beer_food_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium_size"
                android:layout_marginTop="@dimen/medium_size"
                android:text="@string/food_pairings"
                android:textColor="?attr/textColor"
                android:textSize="@dimen/title_text_size"
                android:textAllCaps="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fav_beer_description" />

            <ScrollView
                android:id="@+id/fav_beer_foods"
                android:layout_width="0dp"
                android:layout_height="@dimen/pageMarginAndOffset"
                android:layout_marginStart="@dimen/medium_size"
                android:layout_marginTop="@dimen/small_size"
                android:layout_marginEnd="@dimen/medium_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fav_beer_food_text">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="?attr/textColor"
                    android:textSize="@dimen/content_text_size"
                    android:text="@string/foods_example" />
            </ScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>